# Tarea-Extraclase1-Datos-2

./: README.md
Grafo/: CMakeLists.txt
Grafo/Interfaz/: main.cpp  mainwindow.cpp  mainwindow.h
Grafo/SocketServer/: Client.cpp  Client.h  Server.cpp  Server.h
Grafo/grafo/: Arista.cpp  Arista.h  Grafo.cpp  Grafo.h  Vertice.cpp  Vertice.h  main.cpp
Interfaz/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SocketServer/: Client.cpp  Client.h  Server.cpp  Server.h
grafo/: Grafo.cpp  Grafo.h
